fix(attendance): resolve SonarCloud quality gate issues for PR #101
- Replace duplicate string literals with private static final constants
- Split multi-variable declarations onto separate lines
- Rename finalize() to finalizeAttendance() (reserved method name)
- Remove unused imports (Collectors, Map, Arrays)
- Replace collect(Collectors.toList()) with .toList() (Java 16+)
- Replace raw Map types with Map<String, Object> + ParameterizedTypeReference
- Replace magic number 401 with HttpStatus.UNAUTHORIZED
- Add @Lazy self-injection for proper @Transactional proxy invocation
- Add default case to switch statements
- Reduce cognitive complexity in AttendanceExportService via helper methods
- Fix wildcard return type ResponseEntity<?> to concrete type